# python-project-template

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  environment.yml  pyproject.toml  python_development_environment_setup.md  setup.cfg
src/python_project_template/: cli.py  math.py  player.py
tests/: test_cli.py  test_player.py  test_python_project_template.py
